[metadata]
name = minip4
version = 1.0
summary = Mininet utility for P4 switches
description-file = README.rst
author = Jon Castro
home-page = https://github.com/joncastro/minip4
classifier =
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    minip4

extra_files =
    setup.py
    README.rst
    mnp4

[global]


[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
